--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-beta.13",
+    "@vue/composition-api": "^1.0.0-beta.14",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.1",
     "js-sha1": "^0.6.0",
+    "svg-sprite-loader": "^5.0.0",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
